--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
   <title>Slide Guys Booking</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
   <style>
-    body {
-      background-color: #f8f9fa;
-      font-family: Arial, sans-serif;
-    }
+    body { background-color: #f8f9fa; font-family: Arial, sans-serif; }
 
     .booking-form {
       max-width: 500px;
@@ -20,26 +17,13 @@
       box-shadow: 0 4px 20px rgba(0,0,0,0.1);
     }
 
-    .form-control {
-      background-color: #e9f0ff;
-    }
+    .form-control { background-color: #e9f0ff; }
 
-    .btn-primary {
-      background-color: #006aff;
-      border: none;
-    }
+    .btn-primary { background-color: #006aff; border: none; }
+    .btn-primary:hover { background-color: #0051c9; }
 
-    .btn-primary:hover {
-      background-color: #0051c9;
-    }
+    .logo { max-height: 80px; margin-bottom: 20px; border-radius: 12px; }
 
-    .logo {
-      max-height: 80px;
-      margin-bottom: 20px;
-      border-radius: 12px;
-    }
-
-    /* ====== UNIT BUTTON GRID (replaces dropdown) ====== */
     .unit-grid {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
@@ -92,7 +76,6 @@
       color: #1b1b1b;
     }
 
-    /* ===== Availability badge ===== */
     .unit-badge {
       position: absolute;
       top: 10px;
@@ -119,13 +102,8 @@
       cursor: not-allowed;
     }
 
-    .unit-card-btn.booked img {
-      filter: grayscale(35%);
-    }
-
-    .unit-card-btn.booked .unit-badge {
-      background: #ffe9ea;
-    }
+    .unit-card-btn.booked img { filter: grayscale(35%); }
+    .unit-card-btn.booked .unit-badge { background: #ffe9ea; }
 
     .selected-unit-pill {
       background-color: #e9f0ff;
@@ -136,17 +114,10 @@
       font-size: 0.95rem;
     }
 
-    /* Mobile: 1 column so images are bigger */
     @media (max-width: 420px) {
-      .unit-grid {
-        grid-template-columns: 1fr;
-      }
-      .unit-card-btn {
-        min-height: 210px;
-      }
-      .unit-card-btn img {
-        height: 150px;
-      }
+      .unit-grid { grid-template-columns: 1fr; }
+      .unit-card-btn { min-height: 210px; }
+      .unit-card-btn img { height: 150px; }
     }
   </style>
 </head>
@@ -168,8 +139,6 @@
       </div>
 
       <div class="unit-grid" id="unitGrid"></div>
-
-      <!-- Hidden unit field used by existing cart + submit logic -->
       <input type="hidden" id="unit" required />
 
       <input type="date" id="date" class="form-control mb-3" required />
@@ -194,9 +163,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script>
-    (function () {
-      emailjs.init("PXm_wNk9aIao8Hlpp");
-    })();
+    (function () { emailjs.init("PXm_wNk9aIao8Hlpp"); })();
   </script>
 
   <script>
@@ -215,10 +182,9 @@
       const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M';
       const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
-      // Cache units and booked-unit set for the selected date
       let unitsCache = [];
-      let bookedUnitIds = new Set(); // string(uuid)
-      let isChecking = false;
+      let bookedUnitIds = new Set(); // uuid strings
+      let checking = false;
 
       function clearSelectionUI() {
         document.getElementById('unit').value = '';
@@ -235,7 +201,7 @@
         unitGrid.innerHTML = '';
 
         unitsCache.forEach(unit => {
-          const unitId = String(unit.id); // uuid -> string
+          const unitId = String(unit.id);
           const isBooked = hasDate ? bookedUnitIds.has(unitId) : false;
 
           const btn = document.createElement('button');
@@ -246,7 +212,7 @@
 
           const badgeText = !hasDate
             ? 'Pick a date'
-            : (isChecking ? 'Checking...' : (isBooked ? 'Booked' : 'Available'));
+            : (checking ? 'Checking...' : (isBooked ? 'Booked' : 'Available'));
 
           btn.innerHTML = `
             <div class="unit-badge">${badgeText}</div>
@@ -254,7 +220,7 @@
             <div class="unit-name">${unit.name}</div>
           `;
 
-          if (hasDate && !isChecking && isBooked) {
+          if (hasDate && !checking && isBooked) {
             btn.classList.add('booked');
             btn.setAttribute('aria-disabled', 'true');
           }
@@ -265,7 +231,7 @@
               alert('Please select a date first.');
               return;
             }
-            if (isChecking) {
+            if (checking) {
               alert('Checking availability… try again in a second.');
               return;
             }
@@ -274,10 +240,7 @@
               return;
             }
 
-            // unselect all
             unitGrid.querySelectorAll('.unit-card-btn').forEach(b => b.classList.remove('selected'));
-
-            // select this one
             btn.classList.add('selected');
             unitHidden.value = unit.name;
             unitDisplayText.textContent = unit.name;
@@ -288,43 +251,41 @@
       }
 
       async function loadUnits() {
-        const { data, error } = await supabase.from('units').select('id, name, thumbnail_url');
+        const { data, error } = await supabase
+          .from('units')
+          .select('id, name, thumbnail_url');
+
         if (error) return;
+
         unitsCache = data || [];
         renderUnits();
       }
 
-      // ✅ EXACT same logic as checkout, but for ALL units when date is selected:
-      // bookings where unit = unitId AND date = selectedDate
-      async function checkAvailabilityAllUnitsLikeCheckout(dateStr) {
+      // ✅ ONE query to bookings for the selected date (correct for uuid + date)
+      async function refreshAvailability(dateStr) {
         if (!dateStr) return;
 
-        isChecking = true;
+        checking = true;
         bookedUnitIds = new Set();
         renderUnits();
 
-        // Run the same query checkout uses, but for each unit
-        const checks = unitsCache.map(async (unit) => {
-          const unitId = String(unit.id);
+        const { data: bookings, error } = await supabase
+          .from('bookings')
+          .select('unit')
+          .eq('date', dateStr);
 
-          const { data: existing, error } = await supabase
-            .from('bookings')
-            .select('id')
-            .eq('unit', unitId)   // same as checkout
-            .eq('date', dateStr)  // same as checkout
-            .limit(1);
+        if (!error && bookings) {
+          bookedUnitIds = new Set(bookings.map(b => String(b.unit)));
+        } else {
+          bookedUnitIds = new Set(); // fail open
+          // Uncomment for debugging:
+          // console.log('Availability query error:', error);
+        }
 
-          if (!error && existing && existing.length > 0) {
-            bookedUnitIds.add(unitId);
-          }
-        });
-
-        await Promise.allSettled(checks);
-
-        isChecking = false;
+        checking = false;
         renderUnits();
 
-        // If the currently selected unit is now booked, clear it
+        // if selected unit became booked, clear it
         const selectedUnitName = document.getElementById('unit').value;
         if (selectedUnitName) {
           const selectedUnit = unitsCache.find(u => u.name === selectedUnitName);
@@ -334,26 +295,26 @@
         }
       }
 
-      // Date validation + availability check
       dateInput.addEventListener('change', async () => {
         const selected = new Date(dateInput.value);
         if (selected.getFullYear() !== currentYear) {
           alert("You may only book dates within this year. Bookings for next year open January 1st.");
           dateInput.value = '';
           bookedUnitIds = new Set();
-          isChecking = false;
+          checking = false;
           renderUnits();
           clearSelectionUI();
           return;
         }
 
-        await checkAvailabilityAllUnitsLikeCheckout(dateInput.value);
+        await refreshAvailability(dateInput.value);
       });
 
       await loadUnits();
 
-      // ---------------- Cart logic (kept) ----------------
+      // ------- Your cart + checkout logic (unchanged) -------
       const cart = [];
+
       document.getElementById('addToCartBtn').addEventListener('click', async () => {
         const unitName = document.getElementById('unit').value;
         const date = document.getElementById('date').value;
@@ -363,8 +324,8 @@
           return;
         }
 
-        // refresh availability so it matches checkout right before adding
-        await checkAvailabilityAllUnitsLikeCheckout(date);
+        // Make sure badges are fresh using SAME source/table as checkout
+        await refreshAvailability(date);
 
         const unitRow = unitsCache.find(u => u.name === unitName);
         if (unitRow && bookedUnitIds.has(String(unitRow.id))) {
@@ -397,7 +358,6 @@
         cartList.appendChild(li);
       });
 
-      // ---------------- Checkout submit (your original logic) ----------------
       document.getElementById('bookingForm').addEventListener('submit', async (e) => {
         e.preventDefault();
 
@@ -466,14 +426,14 @@
           document.getElementById('cartSection').style.display = 'none';
 
           bookedUnitIds = new Set();
-          isChecking = false;
+          checking = false;
           renderUnits();
         } else {
           document.getElementById('successMessage').style.display = 'none';
           document.getElementById('errorMessage').style.display = 'block';
 
           const d = document.getElementById('date').value;
-          if (d) await checkAvailabilityAllUnitsLikeCheckout(d);
+          if (d) await refreshAvailability(d);
         }
       });
     });
